manifests/deployment/test/reminders-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reminders-api
  namespace: reminders-main
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  selector:
    matchLabels:
      app: reminders-api
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: reminders-api
        tier: backend
        track: stable
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Development
          image: ---CONTAINER_IMAGE_NAME---
          name: reminders-api
          ports:
            - containerPort: 5001
              hostPort: 5001
              protocol: TCP
          resources: {
              requests: { cpu: "5m", memory: "64Mi" },
              limits: { cpu: "500m", memory: "1024Mi" }
            }
          volumeMounts:
            - mountPath: /app/CleanArchitecture.sqlite
              name: reminders-api-claim
      volumes:
        - name: reminders-api-claim
          persistentVolumeClaim:
            claimName: reminders-api-claim
      hostname: reminders-api
      restartPolicy: Always
      imagePullSecrets:
      - name: aks-pullfrom-dsoapps
