manifests/deployment/test/reminders-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "Server";
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: ingress-reminders-api-main
  namespace: reminders-main
spec:
  ingressClassName: nginx
  rules:
  - host: testazure.serviciosit.co
    http:
      paths:
      - backend:
          service:
            name: reminders-api-svc
            port:
              number: 8080
        path: /reminders/(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - testazure.serviciosit.co
    secretName: tls-certificate
